# krafters

Backend/: index.js  package-lock.json  package.json
Backend/controllers/: admin.controller.js  course.controller.js  payment.controller.js  user.controller.js
Backend/db/: index.js
Backend/middleware/: auth.middleware.js
Backend/models/: course.model.js  payment.model.js  user.model.js
Backend/routes/: admin.route.js  course.route.js  payment.route.js  user.route.js
Backend/utils/: cloudinary.js
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.jsx  index.css  main.jsx
Frontend/src/animation/: defaultPose.js  numbers.js
Frontend/src/components/: ADHDTest2.jsx  AboutSection.jsx  CoursesSec.jsx  FAQs.jsx  FinalResult.jsx  Footer.jsx  Hero.jsx  HorizontalScrollingImages.jsx  HowItWorks.jsx  JoinUs.jsx  JumbledSentenceGame.jsx  MastersSection.jsx  Mentors.jsx  NavBar.jsx  OurCourses.jsx  ReadingTest.jsx  Shimmer.jsx  Testimonial.jsx  ThreeDModelForASL.jsx  UserDashboard.jsx  VideoSection.jsx  WrongWordDetectTest.jsx
Frontend/src/context/: Provider.jsx
Frontend/src/pages/: AboutUs.jsx  ContactUs.jsx  Courses.jsx  (+7 more)
ml-backend/: .gitignore  main.py  pyproject.toml
ml-backend/app/config/: database.py  nlp_setup.py  video_to_text_config.py
ml-backend/app/middleware/: logging_middleware.py
ml-backend/app/models/: schemas.py
ml-backend/app/routes/: document_route.py  text_routes.py  video_to_text_routes.py
ml-backend/app/utils/: chatgpt_chat.py  pdf_processor.py  processor.py  text_processor.py  video_to_text_utils.py
(+20 files in other folders)
